Credentials and work on handling get-events.